--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">Algebra App</string>
     <string name="about_us_title">فريق العمل</string>
     <string name="name_field_placeholder">أدخل اسمك الثلاثي</string>
-    <string name="name_field_label">اسم الطالب</string>
+    <string name="name_field_label">Students Name</string>
     <string name="password_field_placeholder">أدخل كلمة المرور</string>
-    <string name="password_field_label">كلمة المرور</string>
-    <string name="grade_field_title">الصف</string>
-    <string name="class_field_title">الشعبة</string>
+    <string name="password_field_label">Password</string>
+    <string name="grade_field_title">Grade</string>
+    <string name="class_field_title">Class</string>
     <string name="back_button">رجوع</string>
     <string name="empty_view_message">لا توجد بيانات</string>
     <string name="exit_dialog_title">الخروج من التطبيق</string>
@@ -22,7 +22,7 @@
     <string name="registration_form">Registration Form</string>
     <string name="empty_email_password">الرجاء ادخال الاسم وكلمة المرور</string>
     <string name="full_name_message">الرجاء ادخال الاسم الثلاثي</string>
-    <string name="signup_button">حساب جديد</string>
+    <string name="signup_button">Sign Up</string>
     <string name="login_form">Login Form</string>
     <string name="login_button">تسجيل الدخول</string>
     <string name="first_grade">الأول</string>
